--- a/index.html
+++ b/index.html
@@ -54,55 +54,37 @@
     <div class="image-cont">
       <div class="image-item" id="card1">
         <label for="img-1">
-          <img
-            src="../OneDrive_1_6-3-2024/CardMaker/gws.jpg"
-            alt="Card 1"
-            id="img1"
+          <img src="./CardMaker/gws.jpg" alt="Card 1" id="img1"
         /></label>
         <input id="img-1" type="radio" name="check" />
       </div>
       <div class="image-item" id="card2">
         <label for="img-2">
-          <img
-            src="../OneDrive_1_6-3-2024/CardMaker/gws2.jpg"
-            alt="Card 2"
-            id="img2"
+          <img src="./CardMaker/gws2.jpg" alt="Card 2" id="img2"
         /></label>
         <input id="img-2" type="radio" name="check" />
       </div>
       <div class="image-item" id="card3">
         <label for="img-3">
-          <img
-            src="../OneDrive_1_6-3-2024/CardMaker/gws3.jpg"
-            alt="Card 3"
-            id="img3"
+          <img src="./CardMaker/gws3.jpg" alt="Card 3" id="img3"
         /></label>
         <input id="img-3" type="radio" name="check" />
       </div>
       <div class="image-item" id="card4">
         <label for="img-4">
-          <img
-            src="../OneDrive_1_6-3-2024/CardMaker/gwsf.jpg"
-            alt="Card 4"
-            id="img4"
+          <img src="./CardMaker/gwsf.jpg" alt="Card 4" id="img4"
         /></label>
         <input id="img-4" type="radio" name="check" />
       </div>
       <div class="image-item" id="card5">
         <label for="img-5">
-          <img
-            src="../OneDrive_1_6-3-2024/CardMaker/gwsf2.jpg"
-            alt="Card 5"
-            id="img5"
+          <img src="./CardMaker/gwsf2.jpg" alt="Card 5" id="img5"
         /></label>
         <input id="img-5" type="radio" name="check" />
       </div>
       <div class="image-item" id="card6">
         <label for="img-6">
-          <img
-            src="../OneDrive_1_6-3-2024/CardMaker/gwsf2.png"
-            alt="Card 6"
-            id="img6"
+          <img src="./CardMaker/gwsf2.png" alt="Card 6" id="img6"
         /></label>
         <input id="img-6" type="radio" name="check" />
       </div>
